add testing for ufbtab, and convert ufbevn and ufbin3 to F90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ list(APPEND fortran_src
   jumplink.F90 mastertable.F90 missing.F90 mrginv.f
   nevn.f newwin.f nvnwin.f nwords.f nxtwin.f openbt.F90 cftbvs.F90
   readwritemg.F90 readwritesb.F90 readwriteval.F90 s013vals.F90 tankrcpt.F90
-  standard.F90 strings.F90 ufbevn.f ufbget.f ufbin3.f ufbinx.f
+  standard.F90 strings.F90 ufbget.f ufbinx.f
   memmsgs.F90 ciencode.F90 cidecode.F90 arallocf.F90 openclosebf.F90
   bufr_interface.F90 bufr_c2f_interface.F90 x4884.F90 bufrlib.F90)
 
