convert ufbget, ufbinx, mrginv, and invmrg to F90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,14 +4,11 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 list(APPEND fortran_src
-  modules_vars.F90 modules_arrs.F90 bitmaps.F90 blocks.F90 borts.F90
-  compress.F90 conwin.f copydata.F90 dumpdata.F90 dxtable.F90
-  errwrt.F90 getwin.f fxy.F90 invcon.f invmrg.f invtag.f invwin.f
-  jumplink.F90 mastertable.F90 missing.F90 mrginv.f
-  nevn.f newwin.f nvnwin.f nwords.f nxtwin.f openbt.F90 cftbvs.F90
-  readwritemg.F90 readwritesb.F90 readwriteval.F90 s013vals.F90 tankrcpt.F90
-  standard.F90 strings.F90 ufbget.f ufbinx.f
-  memmsgs.F90 ciencode.F90 cidecode.F90 arallocf.F90 openclosebf.F90
+  modules_vars.F90 modules_arrs.F90 bitmaps.F90 blocks.F90 borts.F90 compress.F90 errwrt.F90
+  copydata.F90 dumpdata.F90 dxtable.F90 fxy.F90 jumplink.F90 mastertable.F90 missing.F90
+  conwin.f getwin.f invcon.f invtag.f invwin.f nevn.f newwin.f nvnwin.f nwords.f nxtwin.f
+  openbt.F90 cftbvs.F90 readwritemg.F90 readwritesb.F90 readwriteval.F90 s013vals.F90 tankrcpt.F90
+  standard.F90 strings.F90 memmsgs.F90 ciencode.F90 cidecode.F90 arallocf.F90 openclosebf.F90
   bufr_interface.F90 bufr_c2f_interface.F90 x4884.F90 bufrlib.F90)
 
 list(APPEND c_src
