--- a/src/misc.F90.in
+++ b/src/misc.F90.in
@@ -114,10 +114,10 @@ subroutine bfrini
   idxv = 1
 
   do j=1,10
-    ldxa(j)  = nldxa(j)
-    ldxb(j)  = nldxb(j)
-    ldxd(j)  = nldxd(j)
-    ld30(j)  = nld30(j)
+    ldxa(j) = nldxa(j)
+    ldxb(j) = nldxb(j)
+    ldxd(j) = nldxd(j)
+    ld30(j) = nld30(j)
     dxstr(j) = '      '
     nxstr(j) = ndndx(j)*2
     do i=1,ndndx(j)
@@ -199,9 +199,9 @@ recursive subroutine strnum( str, num, iret )
   iret = 0
   num = 0
   call strsuc ( str, str2, lens )
-  if ( lens .eq. 0 ) return
+  if ( lens == 0 ) return
   read ( str2(1:lens), '(I40)', iostat = ios ) num
-  if ( ios .ne. 0 ) iret = -1
+  if ( ios /= 0 ) iret = -1
 
   return
 end subroutine strnum
@@ -313,14 +313,14 @@ subroutine jstnum(str,sign,iret)
 
   iret = 0
 
-  if(str.eq.' ') call bort('BUFRLIB: JSTNUM - INPUT BLANK CHARACTER STRING NOT ALLOWED')
+  if(str==' ') call bort('BUFRLIB: JSTNUM - INPUT BLANK CHARACTER STRING NOT ALLOWED')
 
   str = adjustl(str)
   lstr = len(str)
-  if(str(1:1).eq.'+') then
+  if(str(1:1)=='+') then
     str = str(2:lstr)
     sign = '+'
-  elseif(str(1:1).eq.'-') then
+  elseif(str(1:1)=='-') then
     str = str(2:lstr)
     sign = '-'
   else
@@ -328,8 +328,8 @@ subroutine jstnum(str,sign,iret)
   endif
 
   call strnum(str,num,ier)
-  if(ier.lt.0) then
-    if(iprt.ge.0) then
+  if(ier<0) then
+    if(iprt>=0) then
       call errwrt('+++++++++++++++++++++WARNING+++++++++++++++++++++++')
       errstr = 'BUFRLIB: JSTNUM: ENCODED VALUE WITHIN RESULTANT CHARACTER STRING (' // str // ') IS NOT AN INTEGER - '// &
         'RETURN WITH IRET = -1'
@@ -364,7 +364,7 @@ subroutine capit(str)
 
   do i=1,len(str)
     do j=1,26
-      if(str(i:i).eq.lwcs(j:j)) then
+      if(str(i:i)==lwcs(j:j)) then
         str(i:i) = upcs(j:j)
         exit
       endif
@@ -385,7 +385,7 @@ subroutine bvers (cverstr)
 
   character*(*), intent(out) :: cverstr
 
-  if (len(cverstr).lt.8) call bort('BUFRLIB: BVERS - INPUT STRING MUST CONTAIN SPACE FOR AT LEAST 8 CHARACTERS')
+  if (len(cverstr)<8) call bort('BUFRLIB: BVERS - INPUT STRING MUST CONTAIN SPACE FOR AT LEAST 8 CHARACTERS')
 
   cverstr = '@PROJECT_VERSION@'
 
@@ -411,9 +411,9 @@ integer function isize (num) result (iret)
 
   character*128 bort_str
 
-  if ( num .ge. 0 ) then
+  if ( num >= 0 ) then
     do iret = 1, 5
-      if ( num .lt. 10**iret ) return
+      if ( num < 10**iret ) return
     enddo
   endif
   write(bort_str,'("BUFRLIB: ISIZE - INPUT NUMBER (",I7,") IS OUT OF RANGE")') num
@@ -464,7 +464,7 @@ recursive integer function igetsc(lunit) result(iret)
 
   ! Make sure the specified logical unit is connected to the library.
   call status(lunit,lun,il,im)
-  if(il.eq.0) call bort('BUFRLIB: IGETSC - BUFR FILE IS CLOSED, IT MUST BE OPEN')
+  if(il==0) call bort('BUFRLIB: IGETSC - BUFR FILE IS CLOSED, IT MUST BE OPEN')
 
   iret = iscodes(lun)
 
@@ -487,17 +487,17 @@ integer function iokoper(nemo) result(iret)
 
   character*(*), intent(in) :: nemo
 
-  if ( len(nemo).lt.6 ) then
+  if ( len(nemo)<6 ) then
     iret = 0
   else if ( lge(nemo(1:3),'201') .and. lle(nemo(1:3),'208') ) then
     iret = 1
-  else if ( nemo(1:3).eq.'221' ) then
+  else if ( nemo(1:3)=='221' ) then
     iret = 1
-  else if ( ( ( nemo(4:6).eq.'000' ) .or. ( nemo(4:6).eq.'255' ) ) .and. &
-    ( ( nemo(1:3).eq.'237' ) .or. ( lge(nemo(1:3),'241') .and. lle(nemo(1:3),'243') ) ) ) then
+  else if ( ( ( nemo(4:6)=='000' ) .or. ( nemo(4:6)=='255' ) ) .and. &
+    ( ( nemo(1:3)=='237' ) .or. ( lge(nemo(1:3),'241') .and. lle(nemo(1:3),'243') ) ) ) then
     iret = 1
-  else if ( ( nemo(4:6).eq.'000' ) .and. ( ( lge(nemo(1:3),'222') .and. lle(nemo(1:3),'225') ) .or. &
-    ( nemo(1:3).eq.'232' ) .or. ( nemo(1:3).eq.'235' ) .or. ( nemo(1:3).eq.'236' ) ) ) then
+  else if ( ( nemo(4:6)=='000' ) .and. ( ( lge(nemo(1:3),'222') .and. lle(nemo(1:3),'225') ) .or. &
+    ( nemo(1:3)=='232' ) .or. ( nemo(1:3)=='235' ) .or. ( nemo(1:3)=='236' ) ) ) then
     iret = 1
   else
     iret = imrkopr(nemo)
@@ -520,7 +520,7 @@ subroutine mrginv
   common /mrgcom/ nrpl, nmrg, namb, ntot
   common /quiet/ iprt
 
-  if(iprt.ge.0) then
+  if(iprt>=0) then
     call errwrt('+++++++++++++++++++++BUFRLIB+++++++++++++++++++++++')
     call errwrt('---------------------------------------------------')
     call errwrt('INVENTORY FROM MERGE PROCESS IN SUBROUTINE INVMRG:')
