--- a/.github/workflows/Spack.yml
+++ b/.github/workflows/Spack.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest"]
-        variants: ["+python ~shared", "~python +shared"]
+        variants: ["+python ~shared ~utils", "~python +shared +utils"]
     runs-on: ${{ matrix.os }}
 
     steps:
