--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -17,14 +17,14 @@ jobs:
   developer:
     runs-on: ubuntu-latest
     env:
-      FC: gfortran-11
-      CC: gcc-11
+      FC: gfortran-12
+      CC: gcc-12
 
     steps:
     - name: install-deps
       run: |
           sudo apt-get update
-          sudo apt-get install doxygen python3-numpy
+          sudo apt-get install doxygen python3-numpy gcc-12 gfortran-12
           sudo python3 -m pip install -U gcovr pdoc
 
     - name: checkout
