developer.yml: add meson; pip --break-system-packages

--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -24,8 +24,8 @@ jobs:
     - name: install-deps
       run: |
           sudo apt-get update
-          sudo apt-get install doxygen python3-numpy gcc-12 gfortran-12
-          sudo python3 -m pip install -U gcovr pdoc
+          sudo apt-get install doxygen python3-numpy gcc-12 gfortran-12 meson
+          sudo python3 -m pip install --break-system-packages -U gcovr pdoc
 
     - name: checkout
       uses: actions/checkout@v4
