developer.yml: debug doxygen (use ubuntu-22.04)

--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   developer:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       FC: gfortran-12
       CC: gcc-12
