--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
           sudo apt-get update
           sudo apt-get install doxygen python3-numpy gcc-12 gfortran-12 meson
-          sudo python3 -m pip install --break-system-packages -U gcovr pdoc
+          sudo python3 -m pip install -U gcovr pdoc
 
     - name: checkout
       uses: actions/checkout@v4
